--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1572,107 +1572,107 @@ stories:
   domain: http://www.pharostribune.com/
   link: https://www.pharostribune.com/indiana/news/article_92ec23af-f07d-5563-a34c-82d387ed2cef.html
 images:
-- name: mosaic-face-mosaic-face-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-yellow-collage.jpg
-- name: braceros-domingo-ulloa-roman-marcus-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-roman-marcus-looking-down.jpg
-- name: san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
-- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
-- name: locked-up-steam-lock-up-steam-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-atari-asteroids.jpg
-- name: store-on-corner-store-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-pond.jpg
-- name: meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-smoking-cigarette.jpg
-- name: gypsymosaic-gypsy-eyes-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-atari-asteroids.jpg
-- name: store-on-corner-oldcabin-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-cinnamon-rolls.jpg
-- name: store-on-corner-oldcabin-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sunday.jpg
-- name: braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-train-subway-125th-down-the-line.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colored-circuits.png
-- name: old-granary-field-granaryfield-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-constitution.jpg
-- name: death-valley-death-valley-national-park-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-purple-pond.jpg
-- name: white-house-lawn-white-house-window-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-satan-red.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-colored-circuits.jpg
-- name: store-on-corner-store-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-cinnamon-rolls.jpg
-- name: adam-smith-adam-smith-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-green-zuma.jpg
-- name: old-barn-old-barn-1500-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-smoking-cigarette.jpg
-- name: mediterranean-mediterranean-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-emily-carr.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-copper-circuit-2.jpg
-- name: rockingchair-rockingchair-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purp-paper.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
-- name: supreme-court-supremecourt-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-graham-sutherland.jpg
-- name: stalin-time-old-time-cash-register.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-time-cash-register.jpg
-- name: old-granary-field-granaryfield-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-bright-sand.jpg
-- name: adam-smith-adam-smith-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-collage.jpg
-- name: copper-circuit-rocking-chair-on-porch_36332220150_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-rocking-chair-on-porch_36332220150_o.jpg
-- name: old-granary-field-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-two.jpg
-- name: adam-smith-adam-smith-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
-- name: paris-paris-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dry-skin.jpg
-- name: yosemite-yosemite-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-graham-sutherland.jpg
-- name: supreme-court-supremecourt-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-aqua.jpg
-- name: gypsy-wagon-gypsywagon-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-colorful-dream.jpg
-- name: school-clouds-church-clouds-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-emily-carr.jpg
-- name: ellis-island-ellis-island-room-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-soul.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-jap-dys-1.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-jap-dys-1.png
-- name: machine-road-machine-road-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dali-two.jpg
-- name: copper-circuit-miami-beach-walkway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-miami-beach-walkway.jpg
-- name: oldhouse-granaryfield-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-hot-spicy.jpg
-- name: border-fence-border-fence-on-hill-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-plentiful.jpg
-- name: capital-battle-capitolbattle-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-cinnamon-rolls.jpg
-- name: ellis-island-ellisisland-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-graham-sutherland.jpg
-- name: copper-circuit-colonial-solider-pointing.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-colonial-solider-pointing.jpg
-- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
-- name: nazi-invasion-old-building-phoenix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-phoenix.jpg
-- name: hollywood-building-hollywood-building-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
-- name: walled-garden-walled-garden-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purp-paper.jpg
-- name: stalin-time-dark-hallway-in-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dark-hallway-in-hotel.jpg
-- name: lincoln-memorial-lincolnmemorial-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-deep-connections.jpg
+- name: walled-garden-walled-garden-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-brush.jpg
+- name: white-house-lawn-white-house-lawn-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-propaganda-leaflets.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-horiz-circuit.jpg
+- name: nazi-invasion-british-black-cab-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-british-black-cab-street.jpg
+- name: docks-docks-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-granite.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-attack-planes.jpg
+- name: nazi-invasion-satellite-with-sunset.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-satellite-with-sunset.jpg
+- name: crow-crow-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-aqua.jpg
+- name: la-muse-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-concert-hall-bright-lights.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-horiz-circuit.jpg
+- name: gypsy-wagon-gypsywagon-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-hot-spicy.jpg
+- name: catacombs-catacombs-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-5.jpg
+- name: blossombar-plentiful-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-24-99.jpg
+- name: ellis-island-ellisisland-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-sunday.jpg
+- name: dc-statue-dcstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-pond.jpg
+- name: copper-circuit-old-computer-bletchley-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-computer-bletchley-crypto.jpg
+- name: copper-circuit-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0033.jpg
+- name: copper-circuit-grain-ship-docking-grass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-grain-ship-docking-grass.jpg
+- name: razorwire-DSC-0080-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-rain.jpg
+- name: lincoln-memorial-lincolnmemorial-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-constitution.jpg
+- name: aws-s3-stories-new-oldbarn-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-oldbarn-dark-dali.jpg
+- name: udnie-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6174.jpg
+- name: curtain-curtain-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-neo-instinct.jpg
+- name: old-door-lock-old-door-lock-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-post-modern.jpg
+- name: store-on-corner-store-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-alberto-giacometti.jpg
+- name: stalin-time-dinosaur-walking-desert.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dinosaur-walking-desert.jpg
+- name: meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-rainbow-festival.jpg
+- name: ellis-island-ellisisland-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-plentiful.jpg
+- name: gypsy-wagon-gypsywagon-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gan-vogh.jpg
+- name: copper-circuit-dark-hallway-in-hotel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-hallway-in-hotel.jpg
+- name: hollywood-building-hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-marcel-duchamp.jpg
+- name: flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-propaganda-leaflets.jpg
+- name: san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-alien-goggles.jpg
+- name: trucksilo-trucksilo-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-ww2-color.jpg
+- name: power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-propaganda-leaflets.jpg
+- name: old-church-oldchurch-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-matrix.jpg
+- name: gypsymosaic-gypsy-eyes-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-paper.jpg
+- name: rockingchair-rockingchair-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
+- name: oldsmallboat-oldsmallboat-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-kand-two.jpg
+- name: dc-statue-dcstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
+- name: bf-skinner-screaming-face-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-screaming-face-statue.jpg
+- name: oldcabin-store-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-graham-sutherland.jpg
+- name: downtown-los-angeles-downtown-la-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-emily-carr.JPG
+- name: rain-princess-IMG_7527.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7527.jpg
+- name: braceros-domingo-ulloa-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-white-house-lawn-view.jpg
+- name: oldhotel-oldhotel-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kand-two.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+- name: store-on-corner-store-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dark-soul.jpg
+- name: oldhousecars-house-old-cars-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-hot-spicy.jpg
+- name: abe-lincoln-one-satan-red-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-satan-red-file-00-00-00-00.jpg
 ---
 Canadian Prime Minister Welcomes Duke And Duchess Of Sussex.&nbsp;Think Dot When Youre Stuffing Those Stockings.&nbsp;Upper Midwest Native Groups Get Big Support From Bush Foundation.&nbsp;Ways Of Using Social Media To Boost Business Intelligence?.&nbsp;County Schools Planning Field Trips.&nbsp;County Receives clean Audit With No Material Weaknesses.&nbsp;Elk Rapids Joins Coastline Effort For Emergency Declaration.&nbsp;Program Offers Scholarship, Internship In Computer Science.&nbsp;
